--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   equatable: ^2.0.7
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
