--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   provider: ^6.1.5+1
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
