--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   json_annotation: ^4.9.0
   provider: ^6.1.5+1
   dartz: ^0.10.1
+  flutter_bloc: ^9.1.1
+  bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
