--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   dartz: ^0.10.1
   flutter_bloc: ^9.1.1
   bloc: ^9.1.0
+  intl: ^0.20.2
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
