--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,11 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: '>=3.0.1 <4.0.0'
+
+dependency_overrides:
+  collection: any
+  analyzer: any
 
 dependencies:
   flutter:
@@ -19,7 +23,7 @@ dependencies:
   dio: ^5.9.0
   freezed: ^3.2.3
   equatable: ^2.0.7
-  freezed_annotation: ^3.1.0
+  freezed_annotation: ^3.0.1
   json_annotation: ^4.9.0
   provider: ^6.1.5+1
   dartz: ^0.10.1
@@ -27,21 +31,27 @@ dependencies:
   bloc: ^9.1.0
   intl: ^0.20.2
   image_picker: ^1.2.0
+  # hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  # hive_generator: ^2.0.1
+  source_gen: ^4.0.2
+  hive_ce_generator: ^1.10.0
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^2.4.14
-  custom_lint: ^0.7.3
+  build_runner: ^2.7.0
+  # custom_lint: ^0.0.16
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
-  json_serializable: ^6.11.1
+  flutter_lints: ^6.0.0
+  json_serializable: ^6.9.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
